[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/ghost/GhostController.gd" type="Script" id=1]
[ext_resource path="res://scene/ghost/move/styles/teleport.gd" type="Script" id=2]
[ext_resource path="res://scene/ghost/DebugLabel.gd" type="Script" id=3]
[ext_resource path="res://scene/ghost/goal/GoalController.gd" type="Script" id=4]
[ext_resource path="res://scene/ghost/drain/DrainController.gd" type="Script" id=5]
[ext_resource path="res://scene/ghost/move/styles/teleport.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.359375, 0.338318, 0.338318, 1 )

[node name="ghost" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 19.8438, 20.1587 )
shape = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_styles/normal = SubResource( 2 )
text = "Ghost"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="DrainController" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="GoalController" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="MovementControllerOld" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="MovementController" parent="." instance=ExtResource( 6 )]
[connection signal="timeout" from="GoalTimer" to="." method="_on_GoalTimer_timeout"]
[connection signal="timeout" from="GoalTimer" to="RichTextLabel" method="_on_GoalTimer_timeout"]
