[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/ghost/move/styles/teleport.gd" type="Script" id=1]

[node name="teleport" type="Node"]
script = ExtResource( 1 )
shakeOffset = 5

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShakeTicker" type="Timer" parent="."]
wait_time = 0.05

[node name="HideTimer" type="Timer" parent="."]
one_shot = true
